2009-04-28  Oliver Hunt  <oliver@apple.com>

        Reviewed by NOBODY (Build fix).

        Roll out r42969, due to hangs in build bot.

        * jit/JITArithmetic.cpp:
        (JSC::JIT::compileFastArith_op_rshift):
        (JSC::JIT::compileFastArithSlow_op_rshift):
        (JSC::isSSE2Present):

2009-04-28  Xan Lopez  <xlopez@igalia.com>

        Unreviewed: fix distcheck build, add (even more) missing files to list.

        * GNUmakefile.am:

2009-04-28  Oliver Hunt  <oliver@apple.com>

        Reviewed by Geoff Garen.

        Improve performance of string indexing

        Add a cti_get_by_val_string function to specialise indexing into a string object.
        This gives us a slight performance win on a number of string tests.

        * jit/JITStubs.cpp:
        (JSC::JITStubs::cti_op_get_by_val):
        (JSC::JITStubs::cti_op_get_by_val_string):
        * jit/JITStubs.h:

2009-04-28  Oliver Hunt  <oliver@apple.com>

        Reviewed by Geoff Garen.

        Improve performance of right shifts of large or otherwise floating point values.

        Add logic to the codegen for right shift to avoid jumping to a helper function
        when shifting a small floating point value.

        * jit/JITArithmetic.cpp:
        (isSSE2Present): Moved to the head of file.
        (JSC::JIT::compileFastArith_op_rshift):
        (JSC::JIT::compileFastArithSlow_op_rshift):

2009-04-28  Xan Lopez  <xlopez@igalia.com>

        Unreviewed: fix distcheck build, add (more) missing files to list.

        * GNUmakefile.am:

2009-04-28  Xan Lopez  <xlopez@igalia.com>

        Unreviewed: fix distcheck build, add missing header to file list.

        * GNUmakefile.am:

2009-04-28  Gavin Barraclough  <barraclough@apple.com>

        Rubber stamped by Maciej "Henry Morgan" Stachowiak.

        Enable YARR.
        (Again.)

        * wtf/Platform.h:

2009-04-27  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Maciej Stachowiak.
